help/deploy/k8s/10-1-cvm-nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: datagrok
  labels:
    service: cvm-nginx
  name: cvm-nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      service: cvm-nginx
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        network: "datagrok"
        service: cvm-nginx
    spec:
      containers:
        - image: datagrok/cvm_nginx:latest
          imagePullPolicy: Always
          name: nginx
          ports:
            - containerPort: 8090
      restartPolicy: Always
