help/deploy/k8s/02-2-datagrok-db-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    service: database
  name: database
  namespace: datagrok
spec:
  ports:
    - name: "postgres"
      port: 5432
      targetPort: 5432
  selector:
    service: database
