help/deploy/k8s/06-2-grok_compute-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: datagrok
  labels:
    service: grok-compute
  name: grok-compute
spec:
  ports:
    - name: "grok-compute"
      port: 5005
      targetPort: 5005
  selector:
    service: grok-compute
