help/deploy/k8s/08-2-jupyter_kernel_gateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: datagrok
  labels:
    service: jupyter-kernel-gateway
  name: jupyter-kernel-gateway
spec:
  ports:
    - name: "helper"
      port: 5005
      targetPort: 5005
    - name: "jupyter"
      port: 8888
      targetPort: 8888
  selector:
    service: jupyter-kernel-gateway
