help/deploy/k8s/10-2-cvm-nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: datagrok
  labels:
    service: cvm
  name: cvm
spec:
  ports:
    - name: "nginx"
      port: 8090
      targetPort: 8090
  selector:
    service: cvm
