help/deploy/k8s/01-datagrok-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  namespace: datagrok
  name: datagrok
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              network: "datagrok"
  podSelector:
    matchLabels:
      network: "datagrok"
